# cobweb

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
.github/workflows/: crawler.yml
crawler/: __main__.py  algolia.py  bing.py  bing_daily_wallpaper.py  bing_search_wallpaper.py  bing_trending_images.py  daily_wallpaper.py  emoji.py  emojis.py  search_wallpaper.py  shared.py  trending_images.py  utils.py
database/bing/daily-wallpaper/2024-11-24/: en-US.json  zh-CN.json
database/bing/daily-wallpaper/en-US/: 2024-11-25.json  2024-11-26.json  2024-11-28.json  2024-11-29.json  2024-12-01.json
database/bing/daily-wallpaper/zh-CN/: 2024-11-24.json  2024-11-25.json  2024-11-29.json
database/bing/search-wallpaper/: 2024-11-29.json  2024-11-30.json
database/bing/trending-images/en-US/: 2024-11-24.json  2024-11-25.json
database/bing/trending-images/zh-CN/: 2024-11-24.json  2024-11-29.json
database/emojis/: unicode.json
database/images/bing-daily-wallpaper/en-US/: 2024-11-24.json  2024-11-25.json  2024-11-27.json  2024-11-30.json  (+135 more)
database/images/bing-search-wallpaper/: 2024-12-01.json  2024-12-02.json  en-US.json
src/app/: fonts.ts  layout.tsx  manifest.json  page.tsx  providers.tsx
src/app/emojis/: layout.tsx
src/app/images/: layout.tsx
src/components/: ChipCheckbox.tsx  Footer.tsx  Header.tsx  ImageCardWithPreview.tsx
src/components/Emojis/: OverviewEmoji.tsx  OverviewInit.tsx
src/components/Images/: OverviewFilter.tsx
src/utils/: api.ts  database.ts  date.ts
(+144 files in other folders)
